--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "utils",
+  "name": "rc-utils",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
