--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -21,7 +21,9 @@
     "rollup": "^2.79.1",
     "@rollup/plugin-typescript": "^8.5.0",
     "@rollup/plugin-json": "^4.1.0",
-    "rollup-plugin-preserve-shebang": "^1.0.1"
+    "rollup-plugin-preserve-shebang": "^1.0.1",
+    "webpack-merge": "^5.8.0",
+    "webpackbar": "^5.0.2"
   },
   "keywords": [],
   "author": "",
