--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -11,19 +11,22 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "chalk": "^5.0.1",
+    "commander": "^9.4.1",
+    "portfinder": "^1.0.32",
+    "react-refresh": "^0.14.0",
     "webpack": "^5.74.0",
     "webpack-dev-server": "^4.11.1",
-    "commander": "^9.4.1",
-    "chalk": "^5.0.1"
-  },
-  "devDependencies": {
-    "typescript": "^4.8.4",
-    "rollup": "^2.79.1",
-    "@rollup/plugin-typescript": "^8.5.0",
-    "@rollup/plugin-json": "^4.1.0",
-    "rollup-plugin-preserve-shebang": "^1.0.1",
     "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.2"
+  },
+  "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.5.0",
+    "rollup": "^2.79.1",
+    "rollup-plugin-preserve-shebang": "^1.0.1",
+    "typescript": "^4.8.4"
   },
   "keywords": [],
   "author": "",
