--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -1,10 +1,20 @@
 {
-  "name": "base",
+  "name": "rc-base",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "axios": "0.24.0",
+    "i18next": "19.9.2",
+    "monorepo-tools": "workspace:^1.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-i18next": "11.3.4",
+    "react-router-dom": "5.3.3",
+    "react-transition-group": "4.4.2"
   },
   "keywords": [],
   "author": "",
