--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -11,6 +11,11 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "babel-loader": "^9.1.2",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "chalk": "^5.0.1",
     "commander": "^9.4.1",
