--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -17,6 +17,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
+    "html-loader": "^4.2.0",
     "chalk": "^5.0.1",
     "commander": "^9.4.1",
     "portfinder": "^1.0.32",
