--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "monorepo-tools start",
+    "start": "monorepo-tools serve -u --prod -p a,v,c",
+    "ss": "monorepo-tools split -s --first a/b/c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
     "axios": "0.24.0",
     "i18next": "19.9.2",
-    "monorepo-tools": "workspace:^1.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-i18next": "11.3.4",
@@ -18,6 +18,7 @@
     "react-transition-group": "4.4.2"
   },
   "devDependencies": {
+    "monorepo-tools": "workspace:^1.0.0",
     "@babel/core": "^7.19.3",
     "@babel/preset-env": "^7.19.3",
     "@babel/preset-react": "^7.18.6",
