--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "monorepo-tools serve -u --prod -p a,v,c",
+    "start": "monorepo-tools serve -u --prod",
     "ss": "monorepo-tools split -s --first a/b/c",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
