--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -27,8 +27,20 @@
     "webpack-merge": "^5.8.0",
     "webpackbar": "^5.0.2",
     "inquirer": "^9.1.4",
-    "@module-federation/fmr": "^0.0.7",
-    "tslib": "2.4.1"
+    "eslint": "^8.34.0",
+    "stylelint": "^15.2.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
+    "css-loader": "^6.7.3",
+    "style-loader": "^3.3.1",
+    "postcss": "^8.4.21",
+    "postcss-loader": "^7.0.2",
+    "postcss-preset-env": "^8.0.1",
+    "mini-css-extract-plugin": "^2.7.2",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "eslint-webpack-plugin": "^4.0.0",
+    "stylelint-webpack-plugin": "^4.1.0",
+    "@module-federation/fmr": "^0.0.7"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
