--- a/monorepo-tools/tsconfig.json
+++ b/monorepo-tools/tsconfig.json
@@ -5,7 +5,7 @@
     "allowSyntheticDefaultImports": true,
     "outDir": "bin",
     "module": "esnext",
-    "target": "es6",
+    "target": "esnext",
     "sourceMap": false,
     "moduleResolution": "node"
   },
