--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "webpack-dev-server": "^4.11.1",
+    "babel-plugin-react-css-modules": "^5.2.6"
   },
   "keywords": [],
   "author": "",
