--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -42,7 +42,8 @@
     "mini-css-extract-plugin": "^2.7.2",
     "eslint-webpack-plugin": "^4.0.0",
     "stylelint-webpack-plugin": "^4.1.0",
-    "@module-federation/fmr": "^0.0.7"
+    "@module-federation/fmr": "^0.0.7",
+    "@babel/plugin-transform-runtime": "^7.21.0"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
