--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -43,7 +43,8 @@
     "eslint-webpack-plugin": "^4.0.0",
     "stylelint-webpack-plugin": "^4.1.0",
     "@module-federation/fmr": "^0.0.7",
-    "@babel/plugin-transform-runtime": "^7.21.0"
+    "@babel/plugin-transform-runtime": "^7.21.0",
+    "core-js": "^3.29.0"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
