--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -11,7 +11,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
-    "babel-plugin-react-css-modules": "^5.2.6"
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "core-js": "^3.29.0"
   },
   "dependencies": {
     "babel-loader": "^9.1.2",
@@ -44,7 +45,7 @@
     "stylelint-webpack-plugin": "^4.1.0",
     "@module-federation/fmr": "^0.0.7",
     "@babel/plugin-transform-runtime": "^7.21.0",
-    "core-js": "^3.29.0"
+    "generic-names": "^2.0.1"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
