--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "17.0.2",
     "react-i18next": "11.3.4",
     "react-router-dom": "5.3.3",
-    "react-transition-group": "4.4.2"
+    "react-transition-group": "4.4.2",
+    "core-js": "^3.29.0"
   },
   "devDependencies": {
     "monorepo-tools": "workspace:^1.0.0",
