构建功能调试完成

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "monorepo-tools serve -u",
+    "build": "monorepo-tools build -u",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
