--- a/monorepo-tools/tsconfig.json
+++ b/monorepo-tools/tsconfig.json
@@ -6,7 +6,7 @@
     "outDir": "bin",
     "module": "esnext",
     "target": "esnext",
-    "sourceMap": false,
+    "sourceMap": true,
     "moduleResolution": "node"
   },
   "exclude": [
