--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -45,7 +45,8 @@
     "stylelint-webpack-plugin": "^4.1.0",
     "@module-federation/fmr": "^0.0.7",
     "@babel/plugin-transform-runtime": "^7.21.0",
-    "generic-names": "^2.0.1"
+    "generic-names": "^2.0.1",
+    "html-webpack-plugin": "^5.5.0"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
