--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -48,7 +48,9 @@
     "generic-names": "^2.0.1",
     "html-webpack-plugin": "^5.5.0",
     "babel-plugin-react-css-modules": "^5.2.6",
-    "core-js": "^3.29.0"
+    "core-js": "^3.29.0",
+    "compression-webpack-plugin": "^10.0.0",
+    "terser-webpack-plugin": "^5.3.6"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
