调试读取环境变量

--- a/monorepo-tools/tsconfig.json
+++ b/monorepo-tools/tsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "outDir": "bin",
     "module": "esnext",
     "target": "esnext",
