--- a/packages/base/package.json
+++ b/packages/base/package.json
@@ -6,6 +6,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "dependencies": {
+    "antd": "4.24.10"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.13.6"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
