--- a/monorepo-tools/package.json
+++ b/monorepo-tools/package.json
@@ -51,7 +51,8 @@
     "core-js": "^3.29.0",
     "compression-webpack-plugin": "^10.0.0",
     "terser-webpack-plugin": "^5.3.6",
-    "css-minimizer-webpack-plugin": "^4.2.2"
+    "css-minimizer-webpack-plugin": "^4.2.2",
+    "@babel/runtime": "^7.22.3"
   },
   "devDependencies": {
     "@rollup/plugin-json": "^4.1.0",
